# schema-rustgistry

./: Cargo.toml  LICENSE  README.md
src/: domain.rs  main.rs
