[package]
name = "schema-rustgistry"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "0.6.8"
md5 = "0.7.0"
avro-rs = "0.13.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
axum = "0.6.0-rc.1"
axum-macros= "0.3.0-rc.1"
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4", features = ["util", "timeout", "load-shed", "limit"] }
tower-http = { version = "0.3.0", features = ["add-extension", "auth", "compression-full", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }